--- a/app/src/main/res/layout/layout_main_activity.xml
+++ b/app/src/main/res/layout/layout_main_activity.xml
@@ -1,58 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/llMainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/app_background"
-    android:visibility="gone"
-    >
+    android:visibility="gone">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@color/colorPrimary"
-        >
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivAction"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginLeft="16dp"
-            android:src="@drawable/shape"
-            android:padding="4dp"
-            android:layout_centerVertical="true"
-            />
-
-
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="MPlayer"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            android:fontFamily="@font/roboto_medium"
-            android:layout_toRightOf="@+id/ivAction"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
-            android:letterSpacing=".01"
-            />
+            app:titleTextColor="@android:color/white"
+            android:background="?attr/colorPrimary"
+            android:fitsSystemWindows="true">
 
-        <ImageView
-            android:id="@+id/ivFav"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_marginLeft="16dp"
-            android:src="@drawable/favorite"
-            android:padding="8dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="16dp"
-            />
+        </android.support.v7.widget.Toolbar>
 
-    </RelativeLayout>
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,43 +35,6 @@
         android:background="@color/colorPrimary"
         >
 
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cvSearchMain"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/white"
-            android:background="@color/white"
-            app:cardCornerRadius="6dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"
-            >
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="16dp"
-                android:src="@drawable/search"
-                android:padding="6dp"
-                android:layout_gravity="center_vertical"
-                />
-
-            <EditText
-                android:id="@+id/etSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_gravity="center_vertical"
-                android:hint="Search Music Titles, Artists, Movies etc."
-                android:textSize="13sp"
-                android:background="@color/white"
-                android:textColor="@color/black"
-                android:singleLine="true"
-                android:fontFamily="@font/roboto_regular"/>
-
-        </android.support.v7.widget.CardView>
     </RelativeLayout>
 
     <RelativeLayout
