--- a/app/src/main/res/layout/layout_spalsh.xml
+++ b/app/src/main/res/layout/layout_spalsh.xml
@@ -16,55 +16,109 @@
 
         <ImageView
             android:id="@+id/ivLogo"
-            android:layout_width="120dp"
-            android:layout_height="160dp"
-            android:src="@drawable/group_2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/movies"
             />
 
+        <TextView
+            android:id="@+id/tvAppName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MagicMovies"
+            android:layout_marginTop="8dp"
+            android:textSize="26sp"
+            android:textColor="@color/white"
+            android:letterSpacing=".08"
+            android:gravity="center"
+            android:lineSpacingExtra="2dp"
+            android:fontFamily="@font/roboto_regular"
+            />
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cvSearchSplash"
+        <LinearLayout
+            android:id="@+id/llContent"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:backgroundTint="@color/white"
-            android:background="@color/white"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
             android:layout_marginTop="40dp"
-            app:cardCornerRadius="6dp"
-            >
+            android:visibility="gone">
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="16dp"
-                android:src="@drawable/search"
-                android:padding="6dp"
-                android:layout_gravity="center_vertical"
-                />
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvSearchSplash"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:backgroundTint="@color/white"
+                android:background="@color/white"
+                app:cardCornerRadius="6dp"
+                >
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="16dp"
+                    android:src="@drawable/search"
+                    android:padding="6dp"
+                    android:layout_gravity="center_vertical"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="Search movies around the world"
+                    android:textSize="13sp"
+                    android:textColor="@color/blue_grey_light"
+                    android:fontFamily="@font/roboto_regular"/>
+
+            </android.support.v7.widget.CardView>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
-                android:layout_gravity="center_vertical"
-                android:text="Search Music Titles, Artists, Movies etc."
-                android:textSize="13sp"
-                android:textColor="@color/blue_grey_light"
-                android:fontFamily="@font/roboto_regular"/>
+                android:layout_marginTop="16dp"
+                android:text="OR"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:letterSpacing=".05"
+                android:gravity="center"
+                android:lineSpacingExtra="2dp"
+                android:fontFamily="@font/roboto_black"/>
 
-        </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvTopMoviesSplash"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:cardBackgroundColor="@color/fb"
+                android:layout_marginTop="16dp"
+                app:cardCornerRadius="6dp"
+                android:layout_marginBottom="8dp"
+                >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="Explore exciting details about the movies you like."
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:letterSpacing=".05"
-            android:gravity="center"
-            android:lineSpacingExtra="2dp"
-            android:fontFamily="@font/roboto_medium"/>
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="16dp"
+                    android:src="@drawable/explore"
+                    android:padding="6dp"
+                    android:layout_gravity="center_vertical"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Explore Popular Movies"
+                    android:textSize="14sp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="60dp"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/roboto_medium"/>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
 
     </LinearLayout>
 
