--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/gray"/>
+            <solid android:color="@color/black"/>
             <!--shadow Color-->
         </shape>
     </item>
@@ -14,7 +14,7 @@
         android:top="0dp"
         android:bottom="1dp">
         <shape android:shape="oval">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/black"/>
         </shape>
     </item>
 </layer-list>
