--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -46,7 +46,7 @@
             android:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground fight clubs\"
             android:fontFamily="@font/roboto_regular"
             android:textColor="@color/white"
-            android:letterSpacing=".05"
+            android:lineSpacingExtra="2dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
@@ -212,6 +212,8 @@
                         android:textColor="@color/gray"
                         android:layout_marginLeft="16dp"
                         android:layout_marginRight="8dp"
+                        android:ellipsize="marquee"
+                        android:maxLength="35"
                         />
 
                     <View
