--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,6 +25,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:menu="@menu/menu_nav"
-        app:headerLayout="@layout/header_nav"/>
+        app:headerLayout="@layout/header_nav"
+        app:itemIconTint="@color/drawer_item_color"
+        app:itemTextColor="@color/drawer_item_color"
+        app:itemBackground="@android:color/transparent"/>
 
 </android.support.v4.widget.DrawerLayout>
