--- a/app/src/main/res/layout/layout_main_activity.xml
+++ b/app/src/main/res/layout/layout_main_activity.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/app_background"
+    android:visibility="gone"
     >
 
     <!--toolbar with search-->
@@ -20,7 +21,8 @@
             android:layout_height="wrap_content"
             app:titleTextColor="@android:color/white"
             android:background="?attr/colorPrimary"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
         </android.support.v7.widget.Toolbar>
 
