--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/popular"
             android:title="Popular" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/top"
             android:title="Top" />
 
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/search"
             android:title="Search" />
     </group>
 </menu>
