--- a/app/src/main/res/layout/header_nav.xml
+++ b/app/src/main/res/layout/header_nav.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:background="@color/fb">
+    android:layout_height="180dp"
+    android:background="@color/fb"
+    android:gravity="bottom"
+    android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/movies"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome User"
-        android:textSize="15sp"
+        android:textSize="30dp"
         android:textColor="@color/white"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:fontFamily="@font/roboto_regular"/>
-
-</RelativeLayout>
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/roboto_thin"/>
+</LinearLayout>
