--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
-            android:id="@+id/action_search"
+            android:id="@+id/action_search_main"
             android:icon="@drawable/search"
             android:orderInCategory="100"
             android:title="@string/abc_search_hint"
